fixed issues in navbar and spacings

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     font-family: Arial, sans-serif;
+    padding-top: 60px;
   }
   
   h1, h2 {
@@ -54,13 +55,17 @@ body {
     100% { transform: scale(1); }
   }
   
-  img {
+  .reaction-group>img {
     cursor: pointer;
   }
   
   /* Apply animation on image click */
   .img-click-animation {
     animation: image-click-animation 0.3s ease;
+  }
+
+  .navbar-brand{
+    padding-left: 20px;
   }
   
   
